added tests, deletion cycle and test calls
