# internal/handlers/getHistory.go
@@ -9,9 +9,9 @@ import (
 	i "github.com/dupreehkuda/balance-microservice/internal"
 )
 
-// ReserveFunds makes a request to reserve funds on account and creates order
-func (h handlers) ReserveFunds(w http.ResponseWriter, r *http.Request) {
-	var data reserve
+// GetHistory gets user`s operations history
+func (h handlers) GetHistory(w http.ResponseWriter, r *http.Request) {
+	var data history
 
 	decoder := json.NewDecoder(r.Body)
 	err := decoder.Decode(&data)
@@ -21,29 +21,27 @@ func (h handlers) ReserveFunds(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	if data.TargetID == "" {
-		h.logger.Error("TargetID is empty")
+	if data.User == "" || data.SortOrder == "" || data.SortBy == "" || data.Quantity == 0 {
 		w.WriteHeader(http.StatusBadRequest)
 		return
 	}
 
-	err = h.actions.ReserveFunds(data.TargetID, data.ServiceID, data.OrderID, data.Amount)
+	if data.SortOrder != "desc" && data.SortOrder != "asc" || data.SortBy != "amount" && data.SortBy != "date" {
+		w.WriteHeader(http.StatusBadRequest)
+		return
+	}
+
+	resp, err := h.actions.GetHistory(data.User, data.SortOrder, data.SortBy, data.Quantity)
 
 	switch err {
 	case i.ErrNoSuchUser:
 		w.WriteHeader(http.StatusBadRequest)
 		return
-	case i.ErrWrongCredentials:
-		w.WriteHeader(http.StatusUnprocessableEntity)
-		return
-	case i.ErrNotEnoughFunds:
-		w.WriteHeader(http.StatusPaymentRequired)
-		return
-	case i.ErrOrderAlreadyExists:
-		w.WriteHeader(http.StatusConflict)
+	case i.ErrNoData:
+		w.WriteHeader(http.StatusNoContent)
 		return
 	case nil:
-		w.WriteHeader(http.StatusCreated)
+		w.Write(resp)
 		return
 	default:
 		h.logger.Error("Error call to actions for reserve", zap.Error(err))
